<resources>
    <string name="app_name">Acessibilidade</string>

    <string name="activity_main_title">Bem vindo!</string>
    <string name="starting_button_text">ENTRAR</string>
    <string name="starting_button_desc">entrar</string>
    <string name="starting_introduction">Aumentando o escopo \ndo seu app</string>
    <string name="starting_constrast_switch">Contraste</string>

    <string name="login_username_edit_hint">Username</string>
    <string name="login_password_edit_hint">Senha</string>
    <string name="login_button">Login</string>
    <string name="login_button_desc">login</string>

    <string name="login_fail_message">Login ou senha inválidos</string>
    <string name="login_empty_input">Preencha todos os campos</string>
    <string name="create_account_link">Não sou cadastrado</string>

    <string name="create_account_username_edit_hint">Username</string>
    <string name="create_account_password_edit_hint">Senha</string>
    <string name="create_account_dbz_edit_defaut_text">0</string>
    <string name="create_account_dbz_edit_label">Esferas do Dragão:</string>
    <string name="create_account_dbz_info_desc">por que informar esferas do dragão</string>
    <string name="create_account_infinity_edit_defaut_text">0</string>
    <string name="create_account_infinity_edit_label">Jóias do Infinito:</string>
    <string name="create_account_infinity_info_desc">por que informar jóias do infinito</string>
    <string name="create_account_button_desc">create account</string>
    <string name="create_account_button_text">Criar conta</string>
    <string name="create_account_sith_check_label">Não sou um Sith</string>
    <string name="create_account_quidditch_check_label">Jogo quadribol</string>
    <string name="create_account_message_dialog_title">Porque informar isso?</string>
    <string name="create_account_message_dialog_positive_button_text">OK</string>
    <string name="create_account_message_dialog_dbz_message">Como descrito em nossos
        termos de uso, planejamos aumentar o escopo de nosso app abrindo as portas ao público
        Sayajin. É possível que tal medida acarrete em mudanças na experiência de uso, incluindo,
        mas não restrito a, telas de loading que duram cinco episódios para terminar, por exemplo</string>
    <string name="create_account_message_dialog_infinity_message">Como descrito em nossa política de
        privacidade, usamos essa informação para prever a possibilidade de que um usuário do nosso app
        porventura extermine metade da população do universo ao estalar os dedos. Buscamos sempre aprimorar
        a usabilidade de nosso produto e acreditamos que ser transformado em poeira cósmica possa implicar
        em graves déficits no cumprimento dessa meta</string>
</resources>
