<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_root"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_center_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

        <TextView
                android:id="@+id/login_app_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/app_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/login_introduction_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:textSize="32sp"
                android:importantForAccessibility="no"/> <!-- This view is used only for aesthetic purposes -->

        <TextView
                android:id="@+id/login_introduction_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/starting_introduction"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/start_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:textSize="16sp"
                android:importantForAccessibility="no"/> <!-- This view is used only for aesthetic purposes -->

        <Button
                android:id="@+id/start_button"
                android:layout_width="128dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/login_button_bg"
                android:text="@string/starting_button_text"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:contentDescription="@string/starting_button_desc"/> <!-- Brief explanation of this view's purpose -->

        <Switch
                android:id="@+id/contrast_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/contrast_switch_text"
                app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
                android:id="@+id/contrast_switch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/starting_constrast_switch"
                android:textSize="20sp"
                android:labelFor="@id/contrast_switch"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/contrast_switch"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>